Fix visibility of combine button

--- a/src/app/components/dataset/dataset.component.css
+++ b/src/app/components/dataset/dataset.component.css
@@ -11,3 +11,7 @@
   margin-left: 5px;
   cursor: pointer;
 }
+
+.bookmark-chip:hover{
+  background-color: #f5f5f5;
+}
